contrib/sticky-session/ingress-dc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${RELEASE_NAME}-odm-dc-ingress
  labels:
    app: ibm-odm-prod
    ingressroutes: ${RELEASE_NAME}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/affinity: cookie

spec:
  rules:
  - http:
      paths:
      - path: /decisioncenter
        pathType: Prefix
        backend:
          service:
            name: ${RELEASE_NAME}-odm-decisioncenter
            port:
              number: 9453
      - path: /decisioncenter-api
        pathType: Prefix
        backend:
          service:
            name: ${RELEASE_NAME}-odm-decisioncenter
            port:
              number: 9453
